# python-bloom-filter

./: .gitignore  README.md  format.sh  pyproject.toml
.github/workflows/: pylint_and_black.yml
sbloom/: bloom_filter.py  segment.py  test.py
src/: bloom_filter.py  main.py  segment.py
