[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-bloom-filter"
dynamic = ["version"]
dependencies = [
    "mmh3",
    "bitarray",
]
authors = [
    {name="Pawel Wolny"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pawel-t-wolny/python-bloom-filter"
Issues = "https://github.com/pawel-t-wolny/python-bloom-filter/issues"