[tool.poetry]
name = "sbloom"
version = "0.1.0"
description = ""
authors = ["Pawel Wolny <pawel.t.wolny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mmh3 = "^5.0.1"
bitarray = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
